<resources>
    <string name="app_name">Retromode</string>
    <string name="label_usuario">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_inicio_sesion">INICIAR SESIÓN</string>
    <string name="label_nuevoUsuario"><b>Crear cuenta</b></string>
    <string name="label_olvide_contra">Olvidé mi contraseña</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Persona Ejemplo</string>
    <string name="nav_header_subtitle">personaejemplo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="descripcion_producto">Esta increíble sudadera de Adidas combina estilo y comodidad en una sola prenda.
        Confeccionada con materiales de alta calidad, esta sudadera es perfecta
        para cualquier ocasión. Su diseño retro y sofisticado hará que destaque entre la multitud.</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_compras">Mis compras</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="add_shop">Añadir al carrito</string>
    <string name="comprar_p">Comprar</string>
    <string-array name="tipoDoc">
        <item>DNI</item>
        <item>CARNET CONDUCIR</item>
        <item>PASAPORTE</item>
    </string-array>
    <string-array name="ciudades">
        <item>Chiclayo</item>
        <item>Lambayeque</item>
        <item>Ferreñafe</item>
    </string-array>
    <string-array name="provincias">
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Gerona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipúzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaén</item>
        <item>La Coruña</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>Léon</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>
</resources>