<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/videoLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:id="@+id/linearLayoutCuadros"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_usuario"
            android:textColorHint="@color/light_purple"
            app:boxStrokeColor="@color/light_purple"
            app:hintTextColor="@color/light_purple"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/light_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editarMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textColor="@color/light_purple"
                android:textColorHint="@color/light_purple"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:textColorHint="@color/light_purple"
            app:boxStrokeColor="@color/light_purple"
            app:hintTextColor="@color/light_purple"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/light_purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textColor="@color/light_purple"
                android:textColorHint="@color/light_purple"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:background="@drawable/bg_gradient"
        android:fontFamily="@font/trueno"
        android:text="@string/label_inicio_sesion"
        android:textColor="@color/white"
        android:textStyle="normal" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayoutRegistros"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trueno"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:gravity="center|center_horizontal"
            android:text="@string/label_olvide_contra"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="165dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/trueno"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevoUsuario"
            android:textColor="@color/light_purple"
            android:textSize="18sp"
            app:drawableTint="@color/light_purple"
            app:drawableEndCompat="@drawable/ic_crearcuenta" />

    </LinearLayout>


</RelativeLayout>